# vcodec

./: .gitignore  CMakeLists.txt  README.md
app/: decoder_test.c  main.c  v4l_capture.c
doc/: bitstream_format.md
include/tools/: pgm.h  source.h  v4l_capture.h  y4m.h
include/vcodec/: bitstream.h  vcodec.h
src/: dct8x8.c  dct8x8_cm4.S  vcodec.c  vcodec_common.c  vcodec_common.h  vcodec_dct.c  vcodec_decoder.c  vcodec_entropy_coding.c  vcodec_entropy_coding.h  vcodec_inter.c  vcodec_med_gr.c  vcodec_transform.c  vcodec_transform.h  vcodec_vec.c  vec_hash.h  vec_table.c  vec_table.h
src/tools/: source.c  y4m.c
test/: CMakeLists.txt  bitstream_test.c  decoder_test.c  entropy_coding_test.c  main.c  motion_prediction_test.c  v4l_capture.h  vcodec_test_main.c
